--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Run Analysis Script
       env:
-        API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         python analysis_fetch_200_Final.py
         today=$(date +%u)
