--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Run Stock Analysis
 
 on:
   schedule:
-    # Runs daily at 9am AEST (which is 11pm UTC)
-    - cron: '0 23 * * *'
+    # Runs daily at 10am AEST (which is 12am UTC)
+    - cron: '0 0 * * *'
 
 jobs:
   run-analysis:
@@ -11,26 +11,25 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Updated to v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3  # Updated to v3
       with:
         python-version: '3.x'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # Add any additional dependencies if needed
+        pip install requests  # Ensure requests library is installed
+        # Install any other dependencies if needed
 
     - name: Run Analysis Script
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         python analysis_fetch_200_Final.py
-        today=$(date +%u)
-        if [ "$today" -eq 1 ]; then
-          mv *.html Basic/
-          mv *.html "Basic Pro"/
-        fi
+        # Move the generated HTML files into the appropriate folders
+        mv *.html Basic/
+        mv *.html "Basic Pro"/
         mv *.html Premium/
