--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Run Stock Analysis
 
 on:
   schedule:
-    # Runs daily at 10am AEST (which is 12am UTC)
-    - cron: '0 0 * * *'
+    # Runs daily at 9am AEST (which is 11pm UTC)
+    - cron: '0 23 * * *'
 
 jobs:
   run-analysis:
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests  # Ensure requests library is installed
+        pip install requests  # Install the requests library
         # Install any other dependencies if needed
 
     - name: Run Analysis Script
@@ -29,7 +29,9 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         python analysis_fetch_200_Final.py
-        # Move the generated HTML files into the appropriate folders
-        mv *.html Basic/
-        mv *.html "Basic Pro"/
+        today=$(date +%u)
+        if [ "$today" -eq 1 ]; then
+          mv *.html Basic/
+          mv *.html "Basic Pro"/
+        fi
         mv *.html Premium/
