--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Run Stock Analysis
 
 on:
   schedule:
-    # Runs daily at 9am AEST (which is 11pm UTC)
-    - cron: '0 23 * * *'
+    # Runs daily at 10am AEST (which is 12am UTC)
+    - cron: '0 0 * * *'
 
 jobs:
   run-analysis:
@@ -21,17 +21,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests  # Install the requests library
-        # Install any other dependencies if needed
+        pip install -r requirements.txt  # Install dependencies from requirements.txt
 
     - name: Run Analysis Script
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         python analysis_fetch_200_Final.py
-        today=$(date +%u)
-        if [ "$today" -eq 1 ]; then
-          mv *.html Basic/
-          mv *.html "Basic Pro"/
-        fi
+        # Move the generated HTML files into the appropriate folders
+        mv *.html Basic/
+        mv *.html "Basic Pro"/
         mv *.html Premium/
