--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -21,7 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Install dependencies from requirements.txt
+        pip install requests  # Explicitly install requests
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  # Install from requirements.txt if it exists
 
     - name: Run Analysis Script
       env:
@@ -32,3 +33,4 @@ jobs:
         mv *.html Basic/
         mv *.html "Basic Pro"/
         mv *.html Premium/
+``
