--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -11,20 +11,25 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3  # Updated to v3 for latest version
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v3  # Updated to v3
+      uses: actions/setup-python@v3
       with:
         python-version: '3.x'
 
-    - name: Check Python version  # Check Python setup
-      run: python --version
+    - name: Check Python version and paths  # Print Python version and paths to verify
+      run: |
+        which python
+        python --version
+        which pip
+        pip --version
+        python -m site  # To check the Python environment paths
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install requests  # Explicitly install requests
+        python -m pip install requests  # Ensure requests is installed
 
     - name: Verify installed packages  # List all installed packages to verify 'requests'
       run: pip freeze
