--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -18,19 +18,12 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Check Python version and paths  # Check Python setup
-      run: |
-        which python
-        python --version
-        which pip
-        pip --version
-
-    - name: Install dependencies  # Install pip and requests explicitly
+    - name: Install dependencies from requirements.txt  # Install from requirements.txt
       run: |
         python -m pip install --upgrade pip
-        python -m pip install requests
+        pip install -r requirements.txt
 
-    - name: Verify installed packages  # Ensure requests is installed
+    - name: Verify installed packages  # Ensure all dependencies are installed
       run: pip freeze
 
     - name: Run Analysis Script
