--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Run Stock Analysis
 
 on:
   schedule:
-    # Runs daily at 10am AEST (which is 12am UTC)
-    - cron: '0 0 * * *'
+    # Runs daily at midday AEST (which is 2am UTC)
+    - cron: '0 2 * * *'  # This runs at 2:00 AM UTC, which is 12:00 PM AEST
 
 jobs:
   run-analysis:
@@ -18,12 +18,12 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies from requirements.txt  # Install from requirements.txt
+    - name: Install dependencies from requirements.txt
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Verify installed packages  # Ensure all dependencies are installed
+    - name: Verify installed packages
       run: pip freeze
 
     - name: Run Analysis Script
@@ -31,7 +31,6 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         python analysis_fetch_200_Final.py
-        # Move the generated HTML files into the appropriate folders
         mv *.html Basic/
         mv *.html "Basic Pro"/
         mv *.html Premium/
