--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,9 +2,8 @@ name: Run Stock Analysis
 
 on:
   schedule:
-    # Runs daily at midday AEDT (which is 1am UTC during daylight saving time)
-    - cron: '0 1 * * *'  # 1:00 AM UTC for 12:00 PM AEDT
-  workflow_dispatch:  # This adds the ability to manually trigger the workflow
+    # Runs daily at midday AEST (which is 2am UTC)
+    - cron: '0 2 * * *'
 
 jobs:
   run-analysis:
@@ -26,6 +25,12 @@ jobs:
 
     - name: Verify installed packages
       run: pip freeze
+
+    # This step is added to verify if the API key is being loaded properly
+    - name: Check OpenAI Key
+      run: echo $OPENAI_API_KEY
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
     - name: Run Analysis Script
       env:
