--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,7 +4,6 @@ on:
   schedule:
     # Runs daily at midday AEST (which is 2am UTC)
     - cron: '0 2 * * *'
-  workflow_dispatch: # Allows you to manually trigger the workflow from GitHub
 
 jobs:
   run-analysis:
@@ -19,22 +18,12 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies from requirements.txt
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Verify installed packages
-      run: pip freeze
-
-    - name: Check OpenAI Key
-      run: echo $OPENAI_API_KEY
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-
     - name: Run Analysis Script
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         python analysis_fetch_200_Final.py
         mv *.html Basic/
