--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -27,3 +27,4 @@ jobs:
         env:
           OPENAI: ${{ secrets.OPENAI }}  # Pass the secret 'OPENAI' to the script
         run: python analysis_fetch_200_Final.py
+#test to see if it appears
