--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # Schedule run (e.g., daily at 10am UTC)
     - cron: '0 10 * * *'
+  workflow_dispatch:  # This allows manual triggering of the workflow
 
 jobs:
   run-analysis:
@@ -27,4 +28,3 @@ jobs:
         env:
           OPENAI: ${{ secrets.OPENAI }}  # Pass the secret 'OPENAI' to the script
         run: python analysis_fetch_200_Final.py
-#test to see if it appears
