--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Run Stock Analysis
 
 on:
   schedule:
-    # Runs daily at 9am AEST (which is 11pm UTC)
-    - cron: '0 23 * * *'
+    # Runs Monday to Friday at 9am AEST (which is 11pm UTC, Monday to Friday)
+    - cron: '0 23 * * 1-5'
   workflow_dispatch:  # This allows manual triggering of the workflow
 
 jobs:
@@ -27,16 +27,19 @@ jobs:
       - name: Run Analysis Script
         env:
           OPENAI: ${{ secrets.OPENAI }}  # Pass the secret 'OPENAI' to the script
-        run: |
-          mkdir -p Basic "Basic Pro" Premium  # Ensure the directories exist
-          python analysis_fetch_200_Final.py
-          mv *.html Basic/
-          mv *.html "Basic Pro"/
-          mv *.html Premium/
+        run: python analysis_fetch_200_Final.py
 
-      - name: List generated files and folders (for debugging)
+      - name: Move files daily to Premium, and on Mondays to Basic and Basic Pro
         run: |
-          ls -al
-          ls -al Basic/
-          ls -al "Basic Pro"/
-          ls -al Premium/
+          # Create directories if they don't exist
+          mkdir -p Basic "Basic Pro" Premium
+          
+          # Move all HTML files to Premium folder every day
+          mv *.html Premium/
+          
+          # If it's Monday (day 1 of the week), move to Basic and Basic Pro as well
+          today=$(date +%u)
+          if [ "$today" -eq 1 ]; then
+            cp Premium/*.html Basic/
+            cp Premium/*.html "Basic Pro"/
+          fi
