--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -24,6 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Create directories
+        run: |
+          mkdir -p Basic "Basic Pro" Premium
+
       - name: Run Analysis Script
         env:
           OPENAI: ${{ secrets.OPENAI }}  # Pass the secret 'OPENAI' to the script
@@ -31,15 +35,15 @@ jobs:
 
       - name: Move files daily to Premium, and on Mondays to Basic and Basic Pro
         run: |
-          # Create directories if they don't exist
-          mkdir -p Basic "Basic Pro" Premium
+          # Move all HTML files to the root directory (optional step if needed)
+          mv *.html ./
           
-          # Move all HTML files to Premium folder every day
-          mv *.html Premium/
+          # Copy all HTML files to Premium folder every day
+          cp *.html Premium/
           
-          # If it's Monday (day 1 of the week), move to Basic and Basic Pro as well
+          # If it's Monday (day 1 of the week), copy files to Basic and Basic Pro
           today=$(date +%u)
           if [ "$today" -eq 1 ]; then
-            cp Premium/*.html Basic/
-            cp Premium/*.html "Basic Pro"/
+            cp *.html Basic/
+            cp *.html "Basic Pro"/
           fi
