--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -33,25 +33,9 @@ jobs:
           OPENAI: ${{ secrets.OPENAI }}  # Pass the secret 'OPENAI' to the script
         run: python analysis_fetch_200_Final.py
 
-      - name: Move files daily to Premium, and on Mondays to Basic and Basic Pro
+      - name: Move files to Basic, Basic Pro, and Premium daily
         run: |
-          # Create directories if they don't exist
-          mkdir -p Basic "Basic Pro" Premium
-          
-          # Copy all HTML files to Premium folder every day
+          # Copy all HTML files to Basic, Basic Pro, and Premium folders daily
+          cp *.html Basic/
+          cp *.html "Basic Pro"/
           cp *.html Premium/
-          
-          # If it's Monday (day 1 of the week), copy files to Basic and Basic Pro
-          today=$(date +%u)
-          if [ "$today" -eq 1 ]; then
-            cp *.html Basic/
-            cp *.html "Basic Pro"/
-          fi
-
-          
-          # If it's Monday (day 1 of the week), copy files to Basic and Basic Pro
-          today=$(date +%u)
-          if [ "$today" -eq 1 ]; then
-            cp *.html Basic/
-            cp *.html "Basic Pro"/
-          fi
