--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Conditionally copy files to Basic and Basic Pro on Mondays
       - name: Copy HTML files to Basic and Basic Pro (Monday Only)
-        if: github.event.schedule == '0 22 * * 1'  # Checks if it's Monday
+        if: startsWith(github.event.schedule, '0 22 * * 1')  # Checks if it's Monday
         run: |
           cp Premium/*.html Basic/
           cp Premium/*.html "Basic Pro"/
@@ -48,5 +48,5 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
-          git commit -m "Update HTML files"
+          git commit -m "Update HTML files" || echo "No changes to commit"
           git push
