--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Run Stock Analysis
 
 on:
   schedule:
-    # Runs Monday to Friday at 8am AEST (which is 10pm UTC, Monday to Friday)
-    - cron: '0 22 * * 1-5'
+    # Runs Monday to Friday at 8am AEST (which is 10pm UTC, Sunday to Thursday)
+    - cron: '0 22 * * 0-4'  # Sunday to Thursday at 10pm UTC, which is Monday to Friday at 8am AEST
   workflow_dispatch:  # This allows manual triggering of the workflow
 
 jobs:
@@ -36,8 +36,9 @@ jobs:
           OPENAI: ${{ secrets.OPENAI }}
         run: python analysis_fetch_200_Final.py
 
-      # Copy HTML files to Basic, Basic Pro, and Premium every day
-      - name: Copy HTML files to Basic and Basic Pro
+      # Copy HTML files to Basic and Basic Pro on Monday AEST only
+      - name: Copy HTML files to Basic and Basic Pro (Monday AEST only)
+        if: github.event.schedule == '0 22 * * 0'  # Run on Sunday 10pm UTC, which is Monday 8am AEST
         run: |
           cp Premium/*.html Basic/
           cp Premium/*.html "Basic Pro"/
