--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Test API Key  # Test if the API key is correctly passed
+        run: echo "OPENAI Key: ${{ secrets.OPENAI }}"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
