--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -22,16 +22,6 @@ jobs:
         with:
           python-version: '3.x'
 
-      # Commented out for testing purposes
-      # - name: Test API Key  # Test if the API key is correctly passed
-      #   run: |
-      #     if [ -z "${{ secrets.OPENAI }}" ]; then 
-      #       echo "OPENAI key is missing!"; 
-      #       exit 1; 
-      #     else 
-      #       echo "OPENAI key is set."; 
-      #     fi
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -43,7 +33,7 @@ jobs:
 
       - name: Run Analysis Script
         env:
-          OPENAI: ${{ secrets.OPENAI }}  # This will use your API key
+          OPENAI: ${{ secrets.OPENAI }}
         run: python analysis_fetch_200_Final.py
 
       # Get the current day of the week in AEST (UTC+10)
