--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Run Stock Analysis
 
 on:
   schedule:
-    # Runs Monday to Friday at 8am AEST (which is 10pm UTC, Sunday to Thursday)
-    - cron: '0 22 * * 0-4'  # Sunday to Thursday at 10pm UTC, which is Monday to Friday at 8am AEST
+    # Runs every Monday at 11pm UTC, which is Monday 9am AEST
+    - cron: '0 23 * * 0'
   workflow_dispatch:  # This allows manual triggering of the workflow
 
 jobs:
